--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <title>Document</title>
 </head>
 <body>
-      <h2>FORMULAIRE DE CONTACT</h2>
+      
       <form action="">
             <div class="pseudo-container">
                   <label for="pseudo">Pseudo</label>
@@ -17,7 +17,7 @@
             </div>
             <div class="email-container">
                   <label for="email"> Email</label>
-                  <input type="email"  autocomplete="off" id="email">
+                  <input type="text"  autocomplete="off" id="email">
                   <span> Email incorrect</span>
             </div>
             <div class="password-container">
@@ -28,7 +28,7 @@
             </div>
             <div class="confirm-container">
                   <label for="password"> Cofirmation mot de passe.</label>
-                  <input type="password"  autocomplete="off" id="password">
+                  <input type="password"  autocomplete="off" id="confirm-password">
                   <span></span>
             </div>
             <input type="submit" value = "Valider" class = "send">
