mise en place de la regex pour la validation du pseudo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       
-      <form action="">
+      <form action="" class = "form">
             <div class="pseudo-container">
                   <label for="pseudo">Pseudo</label>
                   <input type="text"  autocomplete="off" id="pseudo">
