--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       
-      <form action="" class = "form">
+      <form action="" id = "form">
             <div class="pseudo-container">
                   <label for="pseudo">Pseudo</label>
                   <input type="text"  autocomplete="off" id="pseudo">
@@ -23,8 +23,9 @@
             <div class="password-container">
                   <label for="password"> Mot de passe</label>
                   <input type="password"  autocomplete="off" id="password">
-                  <span></span>
                   <p id="progress-bar"></p>
+                  <span></span>
+                  
             </div>
             <div class="confirm-container">
                   <label for="password"> Cofirmation mot de passe.</label>
